Proyecto1BDconAntlr/src/ANTLR/gramaticaDBMSParser.java
package ANTLR;
// Generated from gramaticaDBMS.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramaticaDBMSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, CREATE=16, 
		DATABASE=17, DATABASES=18, ALTER=19, RENAME=20, DROP=21, TO=22, SHOW=23, 
		USE=24, CONSTRAINT=25, PRIMARY=26, FOREIGN=27, KEY=28, REFERENCES=29, 
		CHECK=30, INT=31, FLOAT=32, DATE=33, CHAR=34, AND=35, OR=36, NOT=37, TABLE=38, 
		TABLES=39, ADD=40, COLUMN=41, COLUMNS=42, SHOWX=43, FROM=44, INSERT=45, 
		SELECT=46, VALUES=47, INTO=48, UPDATE=49, SET=50, WHERE=51, DELETE=52, 
		ORDER=53, BY=54, ASC=55, DESC=56, NULL=57, IDX=58, NUMX=59, CHARX=60, 
		SPACEX=61, COMMENTX=62, DIGITX=63;
	public static final int
		RULE_literal = 0, RULE_fecha = 1, RULE_programa = 2, RULE_database = 3, 
		RULE_createDatabase = 4, RULE_alterDatabase = 5, RULE_dropDatabase = 6, 
		RULE_showDatabase = 7, RULE_useDatabase = 8, RULE_opTable = 9, RULE_tipo = 10, 
		RULE_createTable = 11, RULE_constraint = 12, RULE_primaryKey = 13, RULE_foreignKey = 14, 
		RULE_check = 15, RULE_exp = 16, RULE_expression = 17, RULE_andExpr = 18, 
		RULE_eqExpr = 19, RULE_relationExpr = 20, RULE_unaryExpr = 21, RULE_alterTable = 22, 
		RULE_action = 23, RULE_dropTable = 24, RULE_showTables = 25, RULE_showColumns = 26, 
		RULE_insertInto = 27, RULE_updateSet = 28, RULE_deleteFrom = 29, RULE_selectFrom = 30, 
		RULE_sep = 31, RULE_rel_op = 32, RULE_eq_op = 33, RULE_add_op = 34, RULE_mult_op = 35;
	public static final String[] ruleNames = {
		"literal", "fecha", "programa", "database", "createDatabase", "alterDatabase", 
		"dropDatabase", "showDatabase", "useDatabase", "opTable", "tipo", "createTable", 
		"constraint", "primaryKey", "foreignKey", "check", "exp", "expression", 
		"andExpr", "eqExpr", "relationExpr", "unaryExpr", "alterTable", "action", 
		"dropTable", "showTables", "showColumns", "insertInto", "updateSet", "deleteFrom", 
		"selectFrom", "sep", "rel_op", "eq_op", "add_op", "mult_op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'-'", "'('", "')'", "','", "'='", "'*'", "'<'", "'>'", "'<='", 
		"'>='", "'=='", "'!='", "'+'", "'/'", "'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "CREATE", "DATABASE", "DATABASES", "ALTER", "RENAME", 
		"DROP", "TO", "SHOW", "USE", "CONSTRAINT", "PRIMARY", "FOREIGN", "KEY", 
		"REFERENCES", "CHECK", "INT", "FLOAT", "DATE", "CHAR", "AND", "OR", "NOT", 
		"TABLE", "TABLES", "ADD", "COLUMN", "COLUMNS", "SHOWX", "FROM", "INSERT", 
		"SELECT", "VALUES", "INTO", "UPDATE", "SET", "WHERE", "DELETE", "ORDER", 
		"BY", "ASC", "DESC", "NULL", "IDX", "NUMX", "CHARX", "SPACEX", "COMMENTX", 
		"DIGITX"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramaticaDBMS.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramaticaDBMSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode IDX() { return getToken(gramaticaDBMSParser.IDX, 0); }
		public TerminalNode NUMX() { return getToken(gramaticaDBMSParser.NUMX, 0); }
		public TerminalNode CHARX() { return getToken(gramaticaDBMSParser.CHARX, 0); }
		public FechaContext fecha() {
			return getRuleContext(FechaContext.class,0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_literal);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDX:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(IDX);
				}
				break;
			case NUMX:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				match(NUMX);
				}
				break;
			case CHARX:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				match(CHARX);
				}
				break;
			case DIGITX:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				fecha();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FechaContext extends ParserRuleContext {
		public List<TerminalNode> DIGITX() { return getTokens(gramaticaDBMSParser.DIGITX); }
		public TerminalNode DIGITX(int i) {
			return getToken(gramaticaDBMSParser.DIGITX, i);
		}
		public FechaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fecha; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitFecha(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FechaContext fecha() throws RecognitionException {
		FechaContext _localctx = new FechaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fecha);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(DIGITX);
			setState(79);
			match(DIGITX);
			setState(80);
			match(DIGITX);
			setState(81);
			match(DIGITX);
			setState(82);
			match(T__0);
			setState(83);
			match(DIGITX);
			setState(84);
			match(DIGITX);
			setState(85);
			match(T__0);
			setState(86);
			match(DIGITX);
			setState(87);
			match(DIGITX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaContext extends ParserRuleContext {
		public List<DatabaseContext> database() {
			return getRuleContexts(DatabaseContext.class);
		}
		public DatabaseContext database(int i) {
			return getRuleContext(DatabaseContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programa);
		int _la;
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				database();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << ALTER) | (1L << DROP) | (1L << SHOW) | (1L << USE) | (1L << INSERT) | (1L << SELECT) | (1L << UPDATE) | (1L << DELETE))) != 0)) {
					{
					{
					setState(90);
					database();
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatabaseContext extends ParserRuleContext {
		public CreateDatabaseContext createDatabase() {
			return getRuleContext(CreateDatabaseContext.class,0);
		}
		public AlterDatabaseContext alterDatabase() {
			return getRuleContext(AlterDatabaseContext.class,0);
		}
		public DropDatabaseContext dropDatabase() {
			return getRuleContext(DropDatabaseContext.class,0);
		}
		public ShowDatabaseContext showDatabase() {
			return getRuleContext(ShowDatabaseContext.class,0);
		}
		public UseDatabaseContext useDatabase() {
			return getRuleContext(UseDatabaseContext.class,0);
		}
		public OpTableContext opTable() {
			return getRuleContext(OpTableContext.class,0);
		}
		public DatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_database; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatabaseContext database() throws RecognitionException {
		DatabaseContext _localctx = new DatabaseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_database);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(98);
				createDatabase();
				}
				break;
			case 2:
				{
				setState(99);
				alterDatabase();
				}
				break;
			case 3:
				{
				setState(100);
				dropDatabase();
				}
				break;
			case 4:
				{
				setState(101);
				showDatabase();
				}
				break;
			case 5:
				{
				setState(102);
				useDatabase();
				}
				break;
			case 6:
				{
				setState(103);
				opTable();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDatabaseContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(gramaticaDBMSParser.CREATE, 0); }
		public TerminalNode DATABASE() { return getToken(gramaticaDBMSParser.DATABASE, 0); }
		public TerminalNode IDX() { return getToken(gramaticaDBMSParser.IDX, 0); }
		public CreateDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDatabase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitCreateDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateDatabaseContext createDatabase() throws RecognitionException {
		CreateDatabaseContext _localctx = new CreateDatabaseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(CREATE);
			setState(107);
			match(DATABASE);
			setState(108);
			match(IDX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterDatabaseContext extends ParserRuleContext {
		public TerminalNode ALTER() { return getToken(gramaticaDBMSParser.ALTER, 0); }
		public TerminalNode DATABASE() { return getToken(gramaticaDBMSParser.DATABASE, 0); }
		public List<TerminalNode> IDX() { return getTokens(gramaticaDBMSParser.IDX); }
		public TerminalNode IDX(int i) {
			return getToken(gramaticaDBMSParser.IDX, i);
		}
		public TerminalNode RENAME() { return getToken(gramaticaDBMSParser.RENAME, 0); }
		public TerminalNode TO() { return getToken(gramaticaDBMSParser.TO, 0); }
		public AlterDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterDatabase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitAlterDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlterDatabaseContext alterDatabase() throws RecognitionException {
		AlterDatabaseContext _localctx = new AlterDatabaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_alterDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(ALTER);
			setState(111);
			match(DATABASE);
			setState(112);
			match(IDX);
			setState(113);
			match(RENAME);
			setState(114);
			match(TO);
			setState(115);
			match(IDX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropDatabaseContext extends ParserRuleContext {
		public TerminalNode DROP() { return getToken(gramaticaDBMSParser.DROP, 0); }
		public TerminalNode DATABASE() { return getToken(gramaticaDBMSParser.DATABASE, 0); }
		public TerminalNode IDX() { return getToken(gramaticaDBMSParser.IDX, 0); }
		public DropDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropDatabase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitDropDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DropDatabaseContext dropDatabase() throws RecognitionException {
		DropDatabaseContext _localctx = new DropDatabaseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dropDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(DROP);
			setState(118);
			match(DATABASE);
			setState(119);
			match(IDX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowDatabaseContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(gramaticaDBMSParser.SHOW, 0); }
		public TerminalNode DATABASES() { return getToken(gramaticaDBMSParser.DATABASES, 0); }
		public ShowDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showDatabase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitShowDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShowDatabaseContext showDatabase() throws RecognitionException {
		ShowDatabaseContext _localctx = new ShowDatabaseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_showDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(SHOW);
			setState(122);
			match(DATABASES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseDatabaseContext extends ParserRuleContext {
		public TerminalNode USE() { return getToken(gramaticaDBMSParser.USE, 0); }
		public TerminalNode DATABASE() { return getToken(gramaticaDBMSParser.DATABASE, 0); }
		public TerminalNode IDX() { return getToken(gramaticaDBMSParser.IDX, 0); }
		public UseDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useDatabase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitUseDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseDatabaseContext useDatabase() throws RecognitionException {
		UseDatabaseContext _localctx = new UseDatabaseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_useDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(USE);
			setState(125);
			match(DATABASE);
			setState(126);
			match(IDX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpTableContext extends ParserRuleContext {
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public AlterTableContext alterTable() {
			return getRuleContext(AlterTableContext.class,0);
		}
		public DropTableContext dropTable() {
			return getRuleContext(DropTableContext.class,0);
		}
		public ShowTablesContext showTables() {
			return getRuleContext(ShowTablesContext.class,0);
		}
		public ShowColumnsContext showColumns() {
			return getRuleContext(ShowColumnsContext.class,0);
		}
		public InsertIntoContext insertInto() {
			return getRuleContext(InsertIntoContext.class,0);
		}
		public UpdateSetContext updateSet() {
			return getRuleContext(UpdateSetContext.class,0);
		}
		public DeleteFromContext deleteFrom() {
			return getRuleContext(DeleteFromContext.class,0);
		}
		public SelectFromContext selectFrom() {
			return getRuleContext(SelectFromContext.class,0);
		}
		public OpTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opTable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitOpTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OpTableContext opTable() throws RecognitionException {
		OpTableContext _localctx = new OpTableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_opTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(128);
				createTable();
				}
				break;
			case 2:
				{
				setState(129);
				alterTable();
				}
				break;
			case 3:
				{
				setState(130);
				dropTable();
				}
				break;
			case 4:
				{
				setState(131);
				showTables();
				}
				break;
			case 5:
				{
				setState(132);
				showColumns();
				}
				break;
			case 6:
				{
				setState(133);
				insertInto();
				}
				break;
			case 7:
				{
				setState(134);
				updateSet();
				}
				break;
			case 8:
				{
				setState(135);
				deleteFrom();
				}
				break;
			case 9:
				{
				setState(136);
				selectFrom();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(gramaticaDBMSParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(gramaticaDBMSParser.FLOAT, 0); }
		public TerminalNode DATE() { return getToken(gramaticaDBMSParser.DATE, 0); }
		public TerminalNode CHAR() { return getToken(gramaticaDBMSParser.CHAR, 0); }
		public TerminalNode NUMX() { return getToken(gramaticaDBMSParser.NUMX, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tipo);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(INT);
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(FLOAT);
				}
				break;
			case DATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				match(DATE);
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(142);
				match(CHAR);
				setState(143);
				match(T__1);
				setState(144);
				match(NUMX);
				setState(145);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(gramaticaDBMSParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(gramaticaDBMSParser.TABLE, 0); }
		public List<TerminalNode> IDX() { return getTokens(gramaticaDBMSParser.IDX); }
		public TerminalNode IDX(int i) {
			return getToken(gramaticaDBMSParser.IDX, i);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> CONSTRAINT() { return getTokens(gramaticaDBMSParser.CONSTRAINT); }
		public TerminalNode CONSTRAINT(int i) {
			return getToken(gramaticaDBMSParser.CONSTRAINT, i);
		}
		public List<ConstraintContext> constraint() {
			return getRuleContexts(ConstraintContext.class);
		}
		public ConstraintContext constraint(int i) {
			return getRuleContext(ConstraintContext.class,i);
		}
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaDBMSVisitor ) return ((gramaticaDBMSVisitor<? extends T>)visitor).visitCreateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableContext createTable() throws RecognitionException {
		CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_createTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(CREATE);
			setState(149);
			match(TABLE);
			setState(150);
			match(IDX);
			setState(151);
			match(T__1);
			setState(152);
			match(IDX);
			setState(153);
			tipo();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(154);
				match(T__3);
				setState(155);
				match(IDX);
				setState(156);
				tipo();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONSTRAINT) {
				{
				setState(162);
				match(CONSTRAINT);
				setState(163);
				constraint();
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(164);
					match(T__3);
					setState(165);
					match(CONSTRAINT);
					setState(166);
					constraint();
					}
					}
					setState(171);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(174);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
